--- a/home.css
+++ b/home.css
@@ -1,5 +1,15 @@
 
-h1 {
-    color: red;
-    text-align: center;
-  } 
+body {
+  color: purple;
+  text-align: center;
+  background-color: black;
+}
+h1{
+  color: orangered;
+  text-align: center;
+} 
+p{
+  color: aqua;
+  text-decoration: dotted;
+  text-align-last: center;
+}
